WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86403
ASSERTION FAILED: m_verticalScrollbarPainterDelegate on recent builds
https://bugs.webkit.org/show_bug.cgi?id=86403
Summary
ASSERTION FAILED: m_verticalScrollbarPainterDelegate on recent builds
Beth Dakin
Reported
2012-05-14 14:22:57 PDT
I have occasionally encountered this on recent builds: ASSERTION FAILED: m_horizontalScrollbarPainterDelegate /Volumes/Big/Source/Labyrinth/OpenSource/Source/WebCore/platform/mac/ScrollAnimatorMac.mm(873) : virtual void WebCore::ScrollAnimatorMac::willRemoveHorizontalScrollbar(WebCore::Scrollbar *) 1 0x10377770f WebCore::ScrollableArea::willRemoveHorizontalScrollbar(WebCore::Scrollbar*) 2 0x10356a4b2 WebCore::RenderLayer::destroyScrollbar(WebCore::ScrollbarOrientation) 3 0x10356a213 WebCore::RenderLayer::~RenderLayer() 4 0x10356a095 WebCore::RenderLayer::~RenderLayer() 5 0x10356a059 WebCore::RenderLayer::~RenderLayer() 6 0x10356f385 WebCore::RenderLayer::destroy(WebCore::RenderArena*) 7 0x1035022a5 WebCore::RenderBoxModelObject::destroyLayer() 8 0x1035e3bc7 WebCore::RenderObject::willBeDestroyed() 9 0x103502373 WebCore::RenderBoxModelObject::willBeDestroyed() 10 0x1034e2820 WebCore::RenderBox::willBeDestroyed() 11 0x10346e9b2 WebCore::RenderBlock::willBeDestroyed() 12 0x1035e3d4d WebCore::RenderObject::destroy() 13 0x1035e3c4d WebCore::RenderObject::destroyAndCleanupAnonymousWrappers() 14 0x10338bfb0 WebCore::Node::detach() 15 0x1025728db WebCore::ContainerNode::detach() 16 0x10291890b WebCore::Element::detach() 17 0x102574da7 WebCore::ContainerNode::detachChildren() 18 0x1025728c9 WebCore::ContainerNode::detach() 19 0x10291890b WebCore::Element::detach() 20 0x102574da7 WebCore::ContainerNode::detachChildren() 21 0x1025728c9 WebCore::ContainerNode::detach() 22 0x10291890b WebCore::Element::detach() 23 0x102574da7 WebCore::ContainerNode::detachChildren() 24 0x1025728c9 WebCore::ContainerNode::detach() 25 0x102719b0a WebCore::Document::detach() 26 0x102719e33 WebCore::Document::prepareForDestruction() 27 0x1029e0dd6 WebCore::Frame::setView(WTF::PassRefPtr<WebCore::FrameView>) 28 0x1029e37bd WebCore::Frame::createView(WebCore::IntSize const&, WebCore::Color const&, bool, WebCore::IntSize const&, bool, WebCore::ScrollbarMode, bool, WebCore::ScrollbarMode, bool) 29 0x100a5827e WebKit::WebFrameLoaderClient::transitionToCommittedForNewPage() 30 0x1029f621d WebCore::FrameLoader::transitionToCommitted(WTF::PassRefPtr<WebCore::CachedPage>) 31 0x1029f576b WebCore::FrameLoader::commitProvisionalLoad() LEAK: 1 WebPageProxy LEAK: 1 WebContext Patch forthcoming.
Attachments
Patch
(1.87 KB, patch)
2012-05-14 14:30 PDT
,
Beth Dakin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-05-14 14:24:12 PDT
<
rdar://problem/11448841
>
Beth Dakin
Comment 2
2012-05-14 14:27:10 PDT
This appears to be a regression from
http://trac.webkit.org/changeset/116476
and it occurs when you reload a page that contains a RenderLayer with a custom scrollbar. I can't seem to get it to happen in DRT though.
Radar WebKit Bug Importer
Comment 3
2012-05-14 14:27:51 PDT
<
rdar://problem/11448891
>
Beth Dakin
Comment 4
2012-05-14 14:30:04 PDT
Created
attachment 141791
[details]
Patch
Beth Dakin
Comment 5
2012-05-14 14:47:14 PDT
Thanks Simon!
http://trac.webkit.org/changeset/117004
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug