https://bugs.webkit.org/show_bug.cgi?id=86403 ASSERTION FAILED: m_verticalScrollbarPainterDelegate on recent builds -and corresponding- <rdar://problem/11448841>

Reviewed by Simon Fraser.

http://trac.webkit.org/changeset/116476 accidentally started calling
these functions for custom scrollbars. This change replaces that
guard.
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::destroyScrollbar):



Canonical link: https://commits.webkit.org/103996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117004 268f45cc-cd09-0410-ab3c-d52691b4dbfc